--- a/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
+++ b/src/app/compartidos/modal-conceptos-comprobantes/modal-conceptos-comprobantes.component.html
@@ -94,7 +94,7 @@
                           <th scope="col">Importe</th>
                           <th style="width: 250px;" scope="col">Concepto</th>
                           <th scope="col">Monto a Reembolsar</th>
-                          <th scope="col">Observación</th>
+                          <!-- <th scope="col">Observación</th> -->
                           <th scope="col">Comprobante Fiscal</th>
                           <th scope="col">Aplica</th>
                         </tr>
@@ -127,11 +127,11 @@
                               formControlName="monto_rembolsar" type="text" name="linea_detalle" maxlength="20"
                               class="form-control" (keyup)="cambiarEstatusTotalModificado(i)">
                           </th>
-                          <th class="text-right" scope="">
+                          <!-- <th class="text-right" scope="">
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" maxlength="500"
                               name="linea_detalle" formControlName="observacion"
                               style="width: 150px !important; max-height: 250px !important;"></textarea>
-                          </th>
+                          </th> -->
                           <th class="text-center" scope="">
                             <input type="checkbox" class="mx-auto" formControlName="comprobante_fiscal">
                           </th>
