--- a/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
+++ b/src/app/compartidos/comprobacion-components/modal-comprobante/modal-comprobante.component.html
@@ -1,6 +1,6 @@
 <div id="modal_comprobante" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
   aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-lg" style="max-height: 76vh;overflow: auto;">
     <div class="modal-content">
       <div class="row">
         <app-form-comprobacion-header #comprobacionHeader [numero_comprobacion]='numero_comprobacion'
@@ -9,8 +9,7 @@
       </div>
       <div class="row">
         <div class="table-responsive card p-3 sombreado container-sm container-md container-lg container-xl">
-          <table
-            class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody w-100">
+          <table class="row-border hover table table-striped table-bordered  table-fixed w-100">
             <thead>
               <tr>
                 <th scope=""> </th>
@@ -49,6 +48,7 @@
                           <caption style="display: hide;"></caption>
                           <thead>
                             <tr>
+                              <th scope=""><input type="checkbox" name="select_all" id="select_all"></th>
                               <th scope="">Descripción</th>
                               <th scope="">Unidad</th>
                               <th scope="">Valor Unitario</th>
@@ -62,7 +62,8 @@
                             </tr>
                           </thead>
                           <tbody>
-                            <tr *ngFor="let concpeto of item.conceptos">
+                            <tr *ngFor="let concpeto of item.conceptos; let j = index">
+                              <td> <input type="checkbox" [id]="j"> </td>
                               <td> {{ concpeto.concepto }} </td>
                               <td> {{ concpeto.unidad }} </td>
                               <td> {{ concpeto.valorUnitario }} </td>
