--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -107,6 +107,12 @@
                   [attr.selected]="item.id == comprobante.forma_pago ? true : null"> {{ item.text }} </option>
               </select>
             </div>
+
+            <div class="col-md-3 col-sm-4 col-xs-12">
+              <label for="observaciones">Observaciones <span class="requerido">*</span> </label>
+              <textarea class="form-control" maxlength="500" name="observaciones" id="observaciones" rows="3"
+                [(ngModel)]="comprobante.observaciones"></textarea>
+            </div>
           </div>
         </div>
       </div>
