--- a/src/app/compartidos/modal-impuestos/modal-impuestos.component.html
+++ b/src/app/compartidos/modal-impuestos/modal-impuestos.component.html
@@ -25,9 +25,7 @@
                     <caption></caption>
                     <thead>
                       <tr>
-                        <th scope="col">id</th>
                         <th scope="col">linea</th>
-                        <th scope="col">id impuesto</th>
                         <th scope="col">Tipo</th>
                         <th scope="col">Tasa</th>
                         <th scope="col">Importe Original</th>
@@ -39,28 +37,26 @@
                         <th scope="col">Asignar Tipo</th>
                       </tr>
                     </thead>
-                    <tbody formArrayName="conceptos">
-                      <tr [formGroupName]="i" *ngFor="let item of controlsMain.conceptos.controls; let i = index">
-                        <td scope="col">{{conceptos[i].id}}</td>
-                        <td scope="col">{{conceptos[i].linea}}</td>
-                        <td scope="col">{{conceptos[i].id_impuesto}}</td>
-                        <td scope="col">{{conceptos[i].tipo}}</td>
-                        <td scope="col">{{conceptos[i].tasa | currency}}</td>
-                        <td scope="col">{{conceptos[i].importe_original}}</td>
-                        <td scope="col">{{conceptos[i].retencion}}</td>
-                        <td scope="col">{{conceptos[i].local }}</td>
-                        <td scope="col">
+                    <tbody *ngIf="lista_impuestos" formArrayName="conceptos">
+                      <tr *ngFor="let impuesto of lista_impuestos; let i = index">
+                        <td>{{i+1}}</td>
+                        <td> {{list_impuestos[impuesto.impuesto] }}</td>
+                        <td>{{impuesto.tasaOCuota | currency: '$'}}</td>
+                        <td>{{impuesto.importe | currency: '$'}}</td>
+                        <td>{{impuesto.retencion}}</td>
+                        <td>{{impuesto.local }}</td>
+                        <td>
                           <div>
-                            <label><small>importe</small></label>
-                            <input currencyMask formControlName="importe_asignado" type="text" name="linea_detalle"
-                              maxlength="250" class="form-control">
+                            $0
+                            <!-- <input currencyMask [value]='impuesto.importe' type="text" [name]="'linea_detalle_' + i"
+                              maxlength="250" class="form-control"> -->
                           </div>
                         </td>
-                        <td scope="col"> {{conceptos[i].total_restante}} </td>
-                        <td scope="col">
-                          <input type="checkbox" class="mx-auto" formControlName="asignar_tipo">
+                        <td> {{impuesto.total_restante}} </td>
+                        <td>
+                          <input type="checkbox" class="mx-auto">
                         </td>
-                        <td scope="col"> {{conceptos[i].asignar_tipo}} </td>
+                        <td> </td>
                       </tr>
                     </tbody>
                   </table>
