[]fix] listar comprobacione en bandeja aprob

--- a/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
@@ -9,7 +9,8 @@
       <div class="panel-body  table-responsive">
         <table #datatableElement id="tabla_comprobaciones" datatable [dtOptions]="globals.dtOptions"
           [dtTrigger]="dtTrigger"
-          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
+          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody w-100"
+          style="width: 100%;">
           <caption></caption>
           <thead>
             <tr>
